[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets_faces/yuli.png" type="Texture" id=1]
[ext_resource path="res://assets/star5.png" type="Texture" id=2]
[ext_resource path="res://fonts/OpenSans-name.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/OpenSans-Values.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/OpenSans-DEF.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/OpenSans-ATK.tres" type="DynamicFont" id=6]
[ext_resource path="res://summon.gd" type="Script" id=7]
[ext_resource path="res://assets/jingle2.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/jingle1.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/jingle3.wav" type="AudioStream" id=10]

[node name="SummonScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 500
custom_constants/margin_top = 150
custom_constants/margin_left = 500
custom_constants/margin_bottom = 120
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card" type="Panel" parent="."]
margin_left = 500.0
margin_top = 150.0
margin_right = 780.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="Card"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Card/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 268.0
margin_bottom = 438.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaifuName" type="Label" parent="Card/MarginContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 3 )
text = "Yuli"

[node name="WaifuPic" type="TextureRect" parent="Card/MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 256.0
margin_bottom = 294.0
rect_min_size = Vector2( 256, 256 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="Stars" type="Sprite" parent="Card/MarginContainer/VBoxContainer/WaifuPic"]
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="Card/MarginContainer/VBoxContainer"]
margin_top = 298.0
margin_right = 256.0
margin_bottom = 398.0
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 10
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="FlavourText" type="Label" parent="Card/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 2.0
margin_top = 10.0
margin_right = 254.0
margin_bottom = 98.0
size_flags_vertical = 7

[node name="HBoxContainer" type="HBoxContainer" parent="Card/MarginContainer/VBoxContainer"]
margin_top = 402.0
margin_right = 256.0
margin_bottom = 426.0

[node name="Atk" type="Label" parent="Card/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 38.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 6 )
text = "ATK "

[node name="AtkValue" type="Label" parent="Card/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 81.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "1000"

[node name="Control" type="Control" parent="Card/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 85.0
margin_right = 172.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="DefValue" type="Label" parent="Card/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 176.0
margin_right = 215.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "1000"

[node name="Def" type="Label" parent="Card/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 219.0
margin_right = 256.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 5 )
text = " DEF"
align = 2

[node name="Jingle1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Jingle2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Jingle3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
